change rlogs to actvities add favicon and remove collapse sidebar

--- a/views/rlogs.ejs
+++ b/views/rlogs.ejs
@@ -29,7 +29,6 @@
     <!-- Theme skin -->
     <link rel="stylesheet" href="../dist/css/skins/_all-skins.min.css">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,300italic,400italic,600italic">
 
     <!-- Uploader form-->
 
@@ -52,7 +51,7 @@
 
 </head>
 
-<body class="sidebar-mini skin-black sidebar-collapse">
+<body class="sidebar-mini skin-black sidebar">
 
 <div class="wrapper">
   
@@ -192,7 +191,7 @@
         <div class="col-md-4">
             <div class="box box-primary" style="height: 100%;">
                 <div class="box-header with-border">
-                    <h3 class="box-title">Post your activities</h3>
+                    <h3 class="box-title">Upload your activities to Tableau</h3>
         
                     <div class="box-tools pull-right">
                     <!--<button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
@@ -432,7 +431,7 @@
                           </div> 
                           <div class="modal-footer">
                             
-                              <i class="pull-left">When editing activities, you need to <b>change</b> all remaining <span class="label label-danger">*</span> fields.</i>
+                              <i class="pull-left">When editing activities, <b>change</b> all remaining <span class="label label-danger">*</span> fields too.</i>
 
                           </div>
                         </div>
@@ -453,9 +452,6 @@
       </div>
         <!-- /.box -->
 
-        
-        
-  
     </section>
     <!-- /.content -->
 
@@ -708,7 +704,7 @@
       'responseive': true,
       "columnDefs": [
     { "width": "12%", "targets": [0, 1, 2] },
-    { "width": "3%", "targets": -1 }
+    { "width": "7%", "targets": -1 }
   ]
     });
 
