--- a/public/style/daterangepicker.css
+++ b/public/style/daterangepicker.css
@@ -1,7 +1,7 @@
 .daterangepicker {
   position: absolute;
   color: inherit;
-  background-color: #fff;
+  background-color: #f39c12;
   border-radius: 4px;
   width: 278px;
   padding: 4px;
