user access with full functionality

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -78,17 +78,15 @@
         <!-- /.col -->
       </div>
     </form>
-    <p class="login-box-msg"><i style="font-size:10px; color:red;">Do not use your MES credentials</i></p>
+   
     
-    <div id="error">
+    <div id="error" style="padding-top: 10px;">
         <!-- error / success will be shown here -->
     </div>
 
     <br/>
-    <div>
-        <a href="#">I forgot my password</a><br>
-    </div>
-    
+   
+    <p class="login-box-msg" style="font-size:12px;">Do not use your Outlook credentials</p>
 
   </div>
   <!-- /.login-box-body -->
