--- a/views/activities.ejs
+++ b/views/activities.ejs
@@ -76,7 +76,7 @@
             <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <!--<img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image"> -->
+                <img src="../style/user.png" class="user-image" alt="User Image">
                 <span class="hidden-xs"><%= user_details[0].name %></span>
               </a>
               <ul class="dropdown-menu">
@@ -104,7 +104,16 @@
   <aside class="main-sidebar">
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
-     
+     <!-- Sidebar user panel -->
+     <div class="user-panel">
+        <div class="pull-left image">
+          <img src="../style/user.png" class="img-circle" alt="User Image">
+        </div>
+        <div class="pull-left info">
+          <p><%= user_details[0].name %></p>
+          <a href="#"><i class="fa fa-vcard"></i> <%= user_details[0].department%></a>
+        </div>
+      </div>
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
         <!--<li class="header"><span>FAB<span style="color:orange;margin:1px;">4</span></li>-->
@@ -174,7 +183,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Fab4 Engineering
+        Fab4 <%= user_details[0].department%>
         <small>activity uploader</small>
       </h1>
       <ol class="breadcrumb">
