--- a/views/overallactivity.ejs
+++ b/views/overallactivity.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>  
-    <title>Fab4 Meta - Activity </title>
+    <title>Fab4 Meta - Overall </title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Tell the browser to be responsive to screen width -->
@@ -116,8 +116,8 @@
       </div>
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
-        <li class="treeview active"><a href="#" style="text-decoration: none;"><i class="fa fa-dashboard"></i> <span>Profile</span></a></li>
-        <li><a href="/overallactivity"  style="text-decoration: none;"><i class="fa fa-home"></i> <span>Fab4 Activities</span></a></li>
+        <li><a href="/activities" style="text-decoration: none;"><i class="fa fa-dashboard"></i> <span>Profile</span></a></li>
+        <li class="treeview active"><a href="#"  style="text-decoration: none;"><i class="fa fa-home"></i> <span>Fab4 Activities</span></a></li>
         <!--<li class="header"><span>FAB<span style="color:orange;margin:1px;">4</span></li>-->
         <!--<li class="active treeview">-->
         <!--<li class="active treeview">
@@ -185,12 +185,12 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Fab4 <%= user_details[0].department%>
-        <small>activity uploader</small>
+        Fab4 Overall
+        <small>activity dashboard</small>
       </h1>
       <ol class="breadcrumb">
-        <li><a href=""><i class="fa fa-dashboard"></i> Home</a></li>
-        <li class="active">activities</li>
+        <li><a href="/activities"><i class="fa fa-dashboard"></i> Home</a></li>
+        <li class="active">overallactivity</li>
       </ol>
     </section>
 
@@ -199,76 +199,9 @@
 
       <div class="row">
         <!-- Default box -->
-        <div class="col-md-4">
-            <div class="box box-primary" style="height: 100%;">
-                <div class="box-header with-border">
-                    <h3 class="box-title">Upload your activities</h3>
-        
-                    <div class="box-tools pull-right">
-                    <!--<button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
-                            title="Collapse">
-                        <i class="fa fa-minus"></i></button>
-                    <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
-                        <i class="fa fa-times"></i></button>-->
-                    </div>
-                </div>
-                <div class="box-body">
-                    <form action="" method="post" id="rlogs_form" name="rlogs_form" class="form-upload">
-
-                        <div class="header_div" style="padding-bottom:5px;">
-                            
-                            <!-- Date range -->
-                            <div class="form-group">
-                              <h5>Datetime</h5>
-
-                              <div class="input-group">
-                                <div class="input-group-addon">
-                                  <i class="fa fa-calendar"></i>
-                                </div>
-                                <input type="text" class="form-control pull-right" id="date_range" name="date_range">
-                              </div>
-                              <!-- /.input group -->
-                            </div>
-                            
-                            <div class="comments_name_div" style="padding-bottom:5px;">
-                                <h5>Activity</h5> 
-                                <textarea rows="5" class="form-control" id="comments" name="comments"  placeholder="What's your activity? Be specific."></textarea>
-                            </div>
-
-                            <div class="process_name_div" style="padding-bottom:10px; width:100%;" >
-                                <h5>Tags</h5> 
-                                <select type="text" class="form-control select2" multiple="multiple" id="process_name" name="process_name" data-placeholder="  at least one or multiple process" style="width:100%">
-                                  <% for(let i=0; i<process.length;i++) { %>
-                                    <option value="<%= process[i] %>">
-                                      <%= process[i] %>
-                                    </option>
-                                  <% } %>
-                                </select>
-                            </div>
-                            
-                            <div id="error">
-                                <!-- error / success will be shown here -->
-                            </div>
-
-                            
-                            
-                        </div>
-                        <div class="submit_div" style="padding-top: 5px;">
-                            <button id="btn-rlogs" class="btn btn-md btn-warning pull-left" name="Submit" type="Submit" value="Save">Post Your Activities</button>
-                        </div>
-                        
-                    </form>
-                </div>
-                <!-- /.box-body 
-                <div class="box-footer">
-                    <small style="float:right"><i>All fields are required.</i></small>
-                </div>
-               /.box-footer-->
-            </div>
-        </div>
           
         <!-- Log Box-->
-        <div class="col-md-8">
+        <div class="col-md-12">
           
             <div class="box box-default" style="height: 100%;">
                 <div class="box-header with-border">
@@ -285,7 +218,7 @@
                 <!-- /.box-header -->
                 
                 <div class="box-body table-responsive">
-                    <table id="savedlogs" class="table table-hover">
+                    <table id="overallLogs" class="table table-hover">
                       
                       <thead>
                         <tr>
@@ -295,7 +228,6 @@
                         <th>Activity</th>
                         <th>Owner</th>
                         <th>Duration</th>
-                        <th> </th>
                         </tr>
                         
                       </thead>
@@ -317,10 +249,6 @@
                         <td><%= rlogs_list[i].comments %></td>
                         <td><%= rlogs_list[i].name %></td>
                         <td><%= rlogs_list[i].duration %></td>
-                        <td>
-                          <a href="#edit" data-toggle="modal" data-target="#modal-warning<%= i %>">edit</a>
-                          <a href="#delete" data-toggle="modal" data-target="#modal-danger<%= i %>">delete</a>
-                        </td>
                         
                         </tr>
                         <% } %>
@@ -329,138 +257,7 @@
 
 
                 </div>
-                <% for(let k=0; k < rlogs_list.length; k++) { %>
-                <div class="modal modal-default" id="modal-danger<%= k %>">
-                    <div class="modal-dialog">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span></button>
-                          <h4 class="modal-title">Think twice! You cannot undo this action.</h4>
-                        </div>
-                        <div class="modal-body">
-                          <p>Are you sure you want to <span class="label label-danger">DELETE</span> this activity?</p>
-                          <br/>
-                          <table id="modalsavedlogs" class="table table-bordered">
-                            <thead>
-                              <tr class="warning">
-                                  <th>Start Date</th>
-                                  <th>End Date</th>
-                                  <th>Process</th>
-                                  <th>Activity</th>
-                                  <th>Name</th>
-                                  <th>Duration</th>
-                              </tr>
-                              <tr class="warning">
-                                <td><%= rlogs_list[k].startDate %></td>
-                                <td><%= rlogs_list[k].endDate %></td>
-                                
-                                <td><% if(rlogs_list[k].process_name.length > 0){ %>
-                                  <% for(let j=0; j < rlogs_list[k].process_name.length; j++) { %>
-                                  <span class="label label-primary"><%= rlogs_list[k].process_name[j].process %></span>
-                                  <% } %>
-                                  <% } else {%>
-                                  <span class="label label-primary"><%= rlogs_list[k].process_name.process %></span>
-                                  <% } %>
-                                </td>
-
-                                <td><%= rlogs_list[k].comments %></td>
-                                <td><%= rlogs_list[k].name %></td>
-                                <td><%= rlogs_list[k].duration %></td>
-                              </tr>
-                            </thead>
-                          </table>
-                        </div>
-                        <div class="modal-footer">
-                          <a href="#d" class="btn btn-danger" role="button" onClick="window.location='http://10.3.170.77:7070/delete/<%= rlogs_list[k].id %>'">Yes, delete</a>
-                          <!--<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>-->
-                        </div>
-                      </div>
-                      <!-- /.modal-content -->
-                    </div>
-                    <!-- /.modal-dialog -->
-                  </div>
-
-                  <div class="modal modal-default fade" id="modal-warning<%= k %>">
-                      <div class="modal-dialog">
-                        <div class="modal-content">
-                          <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                              <span aria-hidden="true">&times;</span></button>
-                            <h4 class="modal-title">Edit activity</h4>
-                          </div>
-                          <div class="modal-body">
-                              
-                              <div class="box-body">
-                                  <form action="" method="POST" id="rlogs_form_update<%= k %>" name="rlogs_form_update" class="form-upload">
-              
-                                      <div class="header_div" style="padding-bottom:10px; padding-top:0px;">
-
-
-                                          <div class="comments_name_div" style="padding-bottom:5px;">
-
-                                              <h5>Change activity</h5> 
-                                              <textarea rows="5" class="form-control" id="comments_update" name="comments_update" placeholder="What's your new activity?"><%= rlogs_list[k].comments %></textarea>
-                                          </div>
-
-                                        <!-- Date range -->
-                                        <div class="form-group">
-                                            <h5><span class="label label-danger">*</span> New activity datetime</h5>
-              
-                                            <div class="input-group">
-                                              <div class="input-group-addon">
-                                                <i class="fa fa-calendar"></i>
-                                              </div>
-                                              <input type="text" class="form-control pull-right" id="date_range_update<%= k %>" name="date_range_update" value="">
-                                            </div>
-                                            <!-- /.input group -->
-                                          </div>
-                                          
-                                          <div class="process_name_div" style="padding-bottom: 25px; width:100%;" >
-                                              <h5><span class="label label-danger">*</span> New process tags</h5> 
-
-                                              <select type="text" class="form-control select2" multiple="multiple" id="process_name_update" name="process_name_update" data-placeholder=" edit tags" style="width:100%">
-                                                <% for(let i=0; i<process.length;i++) { %>
-                                                  <option value="<%= process[i] %>">
-                                                    <%= process[i] %>
-                                                  </option>
-                                                <% } %>
-                                              </select>
-                                          </div>
-
-                                          <div>
-                                            <input type="hidden" class="activity_id" id="activity_id" name="activity_id" value="<%= rlogs_list[k].id %>" />
-                                          </div>
-                                          
-                                          <div id="error_update<%= k %>">
-                                              <!-- error / success will be shown here -->
-                                          </div>
-              
-                                          
-                                          
-                                      </div>
-                                      <div class="submit_div" style="padding-top: 5px;">
-                                          <button id="btn-rlogs-update<%= k %>" class="btn btn-md btn-success pull-right" name="Submit" type="Submit" value="Save" >Save Changes</button>
-                                          <!--<button type="button" class="btn btn-default pull-right" data-dismiss="modal">Cancel</button>-->
-                                      </div>
-                                      
-                                  </form>
-                              </div>
-                              
-                          
-                          </div> 
-                          <div class="modal-footer">
-                            
-                              <i class="pull-left">When editing activities, <b>change</b> all remaining <span class="label label-danger">*</span> fields too.</i>
-
-                          </div>
-                        </div>
-                        <!-- /.modal-content -->
-                      </div>
-                      <!-- /.modal-dialog -->
-                    </div>
-                <% } %>
-                  <!-- /.modal -->
+                
                 
                 <!-- /.box-footer-->
             </div>
@@ -712,14 +509,14 @@
     
     $('.select2').select2();
 
-    $('#savedlogs').DataTable({
+    $('#overallLogs').DataTable({
       //'order'       : [[0, 'desc']],
       'order'       : false,
       'paging'      : true,
-      'lengthChange': false,
-      'searching'   : false,
+      'lengthChange': true,
+      'searching'   : true,
       'ordering'    : false,
-      'info'        : false,
+      'info'        : true,
       'autoWidth'   : false,
       'responseive': true,
       "columnDefs": [
