revised email to username

--- a/views/activities.ejs
+++ b/views/activities.ejs
@@ -254,7 +254,7 @@
                             
                         </div>
                         <div class="submit_div" style="padding-top: 5px;">
-                            <button id="btn-rlogs" class="btn btn-md btn-warning pull-left" name="Submit" type="Submit" value="Save">Post Your Activities</button>
+                            <button id="btn-rlogs" class="btn btn-md btn-warning pull-right" name="Submit" type="Submit" value="Save">Post Your Activities</button>
                         </div>
                         
                     </form>
