--- a/views/login.ejs
+++ b/views/login.ejs
@@ -63,8 +63,8 @@
 
     <form action="" method="POST" id="login_auth" name="login_auth">
       <div class="form-group has-feedback">
-        <input type="email" class="form-control" id="email" name="email" placeholder="Email">
-        <span class="fa fa-envelope form-control-feedback"></span>
+        <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+        <span class="fa fa-user form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
         <input type="password" class="form-control" id="password" name="password" placeholder="Password">
