--- a/views/activities.ejs
+++ b/views/activities.ejs
@@ -111,13 +111,15 @@
         </div>
         <div class="pull-left info">
           <p><%= user_details[0].name %></p>
-          <a href="#"><i class="fa fa-vcard"></i> <%= user_details[0].department%></a>
+          <a href="#"><i class="fa fa-vcard text-green"></i> <%= user_details[0].department%></a>
         </div>
       </div>
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
-        <li class="treeview active"><a href="#" style="text-decoration: none;"><i class="fa fa-dashboard"></i> <span>Profile</span></a></li>
-        <li><a href="/overallactivity"  style="text-decoration: none;"><i class="fa fa-home"></i> <span>Fab4 Activities</span></a></li>
+        <li class="header">DASHBOARD</li>
+        <li><a href="/overallactivity"  style="text-decoration: none;"><i class="fa fa-home"></i> <span>Home</span></a></li>
+        <li class="treeview active"><a href="#" style="text-decoration: none;"><i class="fa fa-pencil text-yellow"></i> <span>Activity</span></a></li>
+        <li><a href="/coauploader" style="text-decoration: none;"><i class="fa fa-certificate"></i>  <span>Certificate of Analysis</span></a></li>
         <!--<li class="header"><span>FAB<span style="color:orange;margin:1px;">4</span></li>-->
         <!--<li class="active treeview">-->
         <!--<li class="active treeview">
