--- a/views/coauploader.ejs
+++ b/views/coauploader.ejs
@@ -76,7 +76,7 @@
                 <!-- Menu Body -->
                 <li class="user-body">
                   <div class="pull-right">
-                    <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                    <a href="/logout" class="btn btn-default btn-flat">Sign out</a>
                   </div>
                   <!-- /.row -->
                 </li>
