--- a/views/activities.ejs
+++ b/views/activities.ejs
@@ -221,7 +221,7 @@
                             
                             <!-- Date range -->
                             <div class="form-group">
-                              <h5>Datetime</h5>
+                              <h5>Date range</h5>
 
                               <div class="input-group">
                                 <div class="input-group-addon">
@@ -274,7 +274,7 @@
           
             <div class="box box-default" style="height: 100%;">
                 <div class="box-header with-border">
-                    <h3 class="box-title" style="padding-bottom:12px;">Activity Logs</h3>
+                    <h3 class="box-title" style="padding-bottom:12px;">Your Activity</h3>
         
                     <div class="box-tools pull-right">
                     <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
@@ -291,8 +291,8 @@
                       
                       <thead>
                         <tr>
-                        <th>Start Date</th>
-                        <th>End Date</th>
+                        <th>Start</th>
+                        <th>End</th>
                         <th>Process</th>
                         <th>Activity</th>
                         <th>Owner</th>
@@ -705,7 +705,7 @@
 
 <script src="../dist/js/fastclick.js"></script>
 <script src="../dist/js/adminlte.min.js"></script>
-<script src='../dist/js/socket.io.js'></script>
+<!--<script src='../dist/js/socket.io.js'></script>-->
 
 
 <script>
