--- a/views/coauploader.ejs
+++ b/views/coauploader.ejs
@@ -69,6 +69,7 @@
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <!--<img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image"> -->
+                <img src="../style/user.png" class="user-image" alt="User Image">
                 <span class="hidden-xs"><%= user_details[0].name %></span>
               </a>
               <ul class="dropdown-menu">
@@ -579,7 +580,7 @@
 
 <script src="../dist/js/fastclick.js"></script>
 <script src="../dist/js/adminlte.min.js"></script>
-<script src='../dist/js/socket.io.js'></script>
+<!--<script src='../dist/js/socket.io.js'></script>-->
 
 
 <script type="text/javascript" src="./js/shim.min.js"></script>
