--- a/views/overallactivity.ejs
+++ b/views/overallactivity.ejs
@@ -503,7 +503,7 @@
 
 <script src="../dist/js/fastclick.js"></script>
 <script src="../dist/js/adminlte.min.js"></script>
-<script src='../dist/js/socket.io.js'></script>
+<!--<script src='../dist/js/socket.io.js'></script>-->
 
 
 <script>
