added 404 authenticate error

--- a/views/activities.ejs
+++ b/views/activities.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>  
-    <title>Fab4 Meta - Activity </title>
+    <title>Fab4META - Activity </title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Tell the browser to be responsive to screen width -->
@@ -21,8 +21,6 @@
     <link rel="stylesheet" href="../style/select2.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="../dist/css/AdminLTE.min.css">
-    
-    
     
     <!-- DataTables -->
     <link rel="stylesheet" href="../dist/datatables/css/dataTables.bootstrap.min.css">
