cleaning info and fields and ui

--- a/views/activities.ejs
+++ b/views/activities.ejs
@@ -49,7 +49,7 @@
 
 </head>
 
-<body class="sidebar-mini skin-black-light sidebar">
+<body class="sidebar-mini skin-black sidebar-mini">
 
 <div class="wrapper">
   
