--- a/views/overallactivity.ejs
+++ b/views/overallactivity.ejs
@@ -51,7 +51,7 @@
 
 </head>
 
-<body class="sidebar-mini skin-black-light sidebar">
+<body class="sidebar-mini skin-black sidebar">
 
 <div class="wrapper">
   
@@ -523,7 +523,7 @@
       'autoWidth'   : false,
       'responseive': true,
       "columnDefs": [
-    { "width": "12%", "targets": [0, 1, 2] },
+    { "width": "8%", "targets": [0, 1, 2] },
     { "width": "7%", "targets": [-1, -2] }
   ]
     });
