new supplier added

--- a/views/coauploader.ejs
+++ b/views/coauploader.ejs
@@ -716,8 +716,8 @@
       'order'       : [[0, 'desc']],
       'paging'      : true,
       'lengthChange': false,
-      'searching'   : false,
-      'ordering'    : true,
+      'searching'   : true,
+      'ordering'    : false,
       'info'        : true,
       'autoWidth'   : false,
       'pageLength'  : 4
