--- a/views/activities.ejs
+++ b/views/activities.ejs
@@ -49,7 +49,7 @@
 
 </head>
 
-<body class="sidebar-mini skin-black sidebar-mini">
+<body class="sidebar-mini skin-black sidebar">
 
 <div class="wrapper">
   
@@ -108,7 +108,7 @@
           <img src="../style/user.png" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p><%= user_details[0].name %></p>
+          <p><a href="#" style="text-decoration: none;"><%= user_details[0].name %></a></p>
           <a href="#"><i class="fa fa-vcard text-green"></i> <%= user_details[0].department%></a>
         </div>
       </div>
@@ -116,8 +116,67 @@
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">DASHBOARD</li>
         <li><a href="/overallactivity"  style="text-decoration: none;"><i class="fa fa-home"></i> <span>Home</span></a></li>
-        <li class="treeview active"><a href="#" style="text-decoration: none;"><i class="fa fa-pencil text-yellow"></i> <span>Activity</span></a></li>
-        <li><a href="/coauploader" style="text-decoration: none;"><i class="fa fa-certificate"></i>  <span>Certificate of Analysis</span></a></li>
+        <li class="active treeview">
+          <a href="#">
+            <i class="fa fa-cogs"></i> 
+            <span>Department</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+
+            <li class="treeview">
+              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>Manufacturing</span>
+                <span class="pull-right-container">
+                  <i class="fa fa-angle-left pull-right"></i>
+                </span>
+              </a>
+              <ul class="treeview-menu">
+                <li><a href="#" style="text-decoration: none;"><i class="fa fa-comments-o"></i>  
+                  <span>Endorsement</span>
+                  </a>
+                </li>
+                <li><a href="#" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                  <span>Kitting</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+
+            <li class="active treeview">
+              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o text-yellow"></i> <span>Engineering</span>
+                <span class="pull-right-container">
+                  <i class="fa fa-angle-left pull-right"></i>
+                </span>
+              </a>
+              <ul class="treeview-menu">
+                <li><a href="#" style="text-decoration: none;"><i class="fa fa-inbox text-yellow"></i>  
+                  <span>Activity</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+
+            <li class="treeview">
+              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>QA</span>
+                <span class="pull-right-container">
+                  <i class="fa fa-angle-left pull-right"></i>
+                </span>
+              </a>
+              <ul class="treeview-menu">
+                <li><a href="/coauploader" style="text-decoration: none;"><i class="fa fa-certificate"></i>  
+                  <span>Certificate of Analysis</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+
+          </ul>
+        </li>
+        
+       
+        
         <!--<li class="header"><span>FAB<span style="color:orange;margin:1px;">4</span></li>-->
         <!--<li class="active treeview">-->
         <!--<li class="active treeview">
@@ -174,7 +233,7 @@
         
         <li class="header">ABOUT</li>
         <li><a href="#" style="text-decoration: none;"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
-        <li><a href="#" style="text-decoration: none;"><i class="fa fa-circle-o text-yellow"></i> <span>Information</span></a></li>
+        <li><a href="#" style="text-decoration: none;"><i class="fa fa-info-circle"></i> <span>Information</span></a></li>
       </ul>
     </section>
     <!-- /.sidebar -->
