new dropdown for reports

--- a/views/overallactivity.ejs
+++ b/views/overallactivity.ejs
@@ -118,10 +118,10 @@
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">DASHBOARD</li>
         <li><a href="#"  style="text-decoration: none;"><i class="fa fa-home text-yellow"></i> <span>Home</span></a></li>
-        <li class="active treeview">
+        <li class="treeview">
           <a href="#">
             <i class="fa fa-cogs"></i> 
-            <span>Department</span>
+            <span>Apps</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
@@ -169,6 +169,57 @@
               <ul class="treeview-menu">
                 <li><a href="/coauploader" style="text-decoration: none;"><i class="fa fa-certificate"></i>  
                   <span>Certificate of Analysis</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+
+          </ul>
+        </li>
+
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-line-chart"></i> 
+            <span>Reports</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            
+            <li class="treeview">
+              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>Fab Dashboard</span>
+                <span class="pull-right-container">
+                  <i class="fa fa-angle-left pull-right"></i>
+                </span>
+              </a>
+              <ul class="treeview-menu">
+                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
+                  <span>Process name here...</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+
+            <li class="treeview">
+              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>Squeegee Pressure</span>
+                <span class="pull-right-container">
+                  <i class="fa fa-angle-left pull-right"></i>
+                </span>
+              </a>
+              <ul class="treeview-menu">
+                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
+                  <span>NTM</span>
+                  </a>
+                </li>
+
+                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
+                  <span>PTM</span>
+                  </a>
+                </li>
+
+                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
+                  <span>PLM</span>
                   </a>
                 </li>
               </ul>
