--- a/views/coauploader.ejs
+++ b/views/coauploader.ejs
@@ -111,10 +111,11 @@
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">DASHBOARD</li>
         <li><a href="/overallactivity"  style="text-decoration: none;"><i class="fa fa-home"></i> <span>Home</span></a></li>
+        
         <li class="active treeview">
           <a href="#">
             <i class="fa fa-cogs"></i> 
-            <span>Department</span>
+            <span>Apps</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
@@ -169,6 +170,58 @@
 
           </ul>
         </li>
+
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-line-chart"></i> 
+            <span>Reports</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+
+            <li class="treeview">
+              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>Fab Dashboard</span>
+                <span class="pull-right-container">
+                  <i class="fa fa-angle-left pull-right"></i>
+                </span>
+              </a>
+              <ul class="treeview-menu">
+                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
+                  <span>Process name here...</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            
+            <li class="treeview">
+              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>Squeegee Pressure</span>
+                <span class="pull-right-container">
+                  <i class="fa fa-angle-left pull-right"></i>
+                </span>
+              </a>
+              <ul class="treeview-menu">
+                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
+                  <span>NTM</span>
+                  </a>
+                </li>
+
+                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
+                  <span>PTM</span>
+                  </a>
+                </li>
+
+                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
+                  <span>PLM</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+
+          </ul>
+        </li>
+
         <!--<li class="header"><span>FAB<span style="color:orange;margin:1px;">4</span></li>-->
         <!--<li class="active treeview">-->
         <!--<li class="active treeview">
