include barcode for kitting

--- a/views/coauploader.ejs
+++ b/views/coauploader.ejs
@@ -129,11 +129,7 @@
                 </span>
               </a>
               <ul class="treeview-menu">
-                <li><a href="#" style="text-decoration: none;"><i class="fa fa-comments-o"></i>  
-                  <span>Endorsement</span>
-                  </a>
-                </li>
-                <li><a href="#" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                <li><a href="/kitting" style="text-decoration: none;"><i class="fa fa-cube"></i>  
                   <span>Kitting</span>
                   </a>
                 </li>
