added features to opt

--- a/views/operator.ejs
+++ b/views/operator.ejs
@@ -169,6 +169,9 @@
                                 <h5>Tag Stack ID (100 pcs)</h5> 
 
                                 <section id="multiRow">
+                                    <div id="liner">
+                                      <input name="liner" hidden value="<%= lineGG %>"/>
+                                    </div>
                                     <div id="initRow">
                                         <input name="multifield" class="form-control" id="runcard_no" placeholder="Scan Stack ID (100 pcs)" style="display:inline; width:90%;"/>
                                     </div>
